--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'org.jglrxavpok'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'antlr'
 
 sourceCompatibility = 1.8
@@ -76,4 +77,14 @@ dependencies {
     testCompile "org.joml:joml:${jomlVersion}"
     testCompile "com.code-disaster.steamworks4j:steamworks4j:${steamworks4jVersion}"
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+}
+buildscript {
+    ext.kotlin_version = '1.1.0'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 }
