--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ switch ( OperatingSystem.current() ) {
 sourceSets {
     main {
         java {
-            srcDirs = ["src/main/java", "src/main/gen"]
+            srcDirs = ["src/main/java", "src/main/gen", "src/main/kotlin"]
         }
         resources {
             srcDirs = ["src/main/resources"]
